# IHTC-Casting

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ihtc_curve.csv  pyproject.toml
docs/: FAQ.md  METHODOLOGY.md  REFERENCES.md
examples/: temps.csv
src/ihtccast/: _version.py  cli.py  core.py
tests/: test_import.py
