[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ihtccast"
version = "0.1.0"
description = "Estimate interfacial heat transfer coefficient (IHTC) between sand mold and cast steel from thermocouple data."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["casting","steel","IHTC","inverse heat conduction","foundry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "matplotlib>=3.6",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/yourname/ihtccast"
Repository = "https://github.com/yourname/ihtccast"
Issues = "https://github.com/yourname/ihtccast/issues"
Documentation = "https://github.com/yourname/ihtccast#readme"

[project.scripts]
ihtc = "ihtccast.cli:main"

[tool.hatch.build.targets.sdist]
include = ["/src","/README.md","/LICENSE","/CITATION.cff","/examples","/tests","/.github","/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/ihtccast"]

[tool.hatch.metadata]
allow-direct-references = true
